# zerofish

./: .gitignore  README  README.md  release_notes.md
.github/workflows/: release.yml  rust.yml
chess-server/: .gitignore  package.json
chess-server/src/: app.module.ts  main.ts
engine/: .gitignore  Cargo.toml  TODO
engine/src/: bitboard.rs  board_position.rs  board_state.rs  engine.rs  engine_thread.rs  evaluation.rs  fen.rs  lib.rs  main.rs  move.rs  perft.rs  pgn.rs  piece.rs  piece_square_table.rs  search.rs  side.rs  square.rs  statistics.rs  time.rs  transposition.rs  uci.rs  util.rs  zobrist.rs
futurejava/: NOTES  pom.xml
futurejava/core/: pom.xml
futurejava/nnue-training/: NOTES-NNUE  pom.xml
gameplayagent/: .gitignore  package.json  tsconfig.json
gameplayagent/src/: agent.ts  textClassification.ts  textSummarization.ts  tfTest.ts
legacyjava/: .gitignore  pom.xml
legacyjava/core/: pom.xml
nnue-training/: requirements.txt
nnue-training/src/: prepare_halfkp.py
solver/src/: board_navigation.rs  main.rs  model.rs  sudoku_game_context.rs
ts-engine/: .gitignore  .npmignore  NOTES  jest.config.js  package.json  rollup.config.js  tsconfig.json
ts-engine/src/: BB64Long.ts  Bitboard.ts  BoardState.ts  Constants.ts  Evaluation.ts  Fen.ts  Limits.ts  Move.ts  MoveList.ts  MoveOrdering.ts  Perft.ts  Pgn.ts  Piece.ts  PieceType.ts  (+11 more)
wasm/: Cargo.toml  NOTES.txt  concatenate_and_rename.sh  inlined.worker.js
wasm/src/: engine_wrapper.rs  lib.rs  web_worker_adapter.rs
wasm/web/: package.json
wasm/web/public/: index.html  index.js  worker.js
(+156 files in other folders)
