[package]
name = "zerofish-wasm"
version = "0.0.1"
edition = "2021"
license = "GPL"

[profile.release]
lto = true
opt-level = 'z'

[lib]
crate-type = ["cdylib"]

[dependencies]
zerofish = { path = "../engine" }
wasm-bindgen = "0.2.82"
#serde = { version = "1.0", features = ["derive"] }
#serde-wasm-bindgen = "0.4"


[dependencies.web-sys]
version = "0.3.60"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'MessagePort',
    'Worker'
]